<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_name"/>

    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_last_name"/>

    <EditText
        android:id="@+id/inputPatronymic"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_patronymic"/>


    <EditText
        android:id="@+id/inputNewLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_new_login"/>

    <EditText
        android:id="@+id/inputNewPassFirst"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/input_new_pass_first"/>

    <EditText
        android:id="@+id/inputNewPassSecond"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/input_new_pass_second"/>

    <Button
        android:id="@+id/createNewUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Регистрация"/>

</LinearLayout>